tests/ui/parser/issues/issue-104620.rs
#![feature(rustc_attrs)]

#![rustc_dummy=5z] //~ ERROR invalid suffix `z` for number literal
fn main() {}
